apps/event-service/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-api
  namespace: event-service
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: event-service-api
  template:
    metadata:
      labels:
        app: event-service-api
    spec:
      containers:
        - name: api
          image: ghcr.io/cristina97is/event-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
