apps/event-service/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service-api
  namespace: event-service
spec:
  selector:
    app: event-service-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
