apps/event-service/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service-db
  namespace: event-service
spec:
  selector:
    app: event-service-db
  ports:
    - port: 5432
      targetPort: 5432
